--- a/ProjectSettings/Packages/com.unity.connect.share/Settings.json
+++ b/ProjectSettings/Packages/com.unity.connect.share/Settings.json
@@ -19,7 +19,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "buildOutputDirList",
-                "value": "{\"m_Value\":\"C:/Users/Deimis/OneDrive/Documents/unity games/builds;;;;;;;;;\"}"
+                "value": "{\"m_Value\":\"C:/Users/Deimis/OneDrive/Documents/GitHub/Air_Hockey/Air-Hockey/WebGL Builds;C:/Users/Deimis/OneDrive/Documents/unity games/builds/air_hockey;C:/Users/Deimis/OneDrive/Documents/unity games/builds;;;;;;;\"}"
             }
         ]
     }
